# Figures

./: CMakeCache.txt  CMakeLists.txt  CMakeListsUnit2.txt  CMakeLists_Main.txt  CTestTestfile.cmake  Figury.cpp  Figury.hpp  Main.cpp  Main_Mock_test.cpp  Main_test.cpp  Makefile  cmake_install.cmake  mock_Figura.hpp
